Tests and bugfixes.